2007-07-03  Philip Van Hoof  <pvanhoof@gnome.org>

	* Bugfix in TnyCamelTransportAccount's prepare method
	* Fixing up the TnyCamelSendQueue's at-connect
	* Bugfix in renaming on IMAP
	* Improved the granularity of the is_connected flag

2007-07-02  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixed a bug in Maildir when setting flags
	* Fixed empty-string folders at root's level on IMAP
	* Fixed blocking reads and writes in camel-tcp-stream-openssl.c,
	camel-tcp-stream-raw.c (camel-file-utils.c) and camel-tcp-stream-nss.c
	* Fixed a IDLE-stop problem when renaming a folder

2007-07-02  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(tny_maemo_conic_device_connect): When using scratchbox, show an 
	OK/Cancel dialog and write a fake connection name to the text file, 
	to simulate what libconic does on the device.
	(on_dummy_connection_check): Interpret 'none' in the text file as 
	meaning no connection. This leaves an empty file as defaulting to 
	a meaning of connection debugid0. (tny_maemo_conic_device_get_
	current_iap_id): Return NULL if the iap is 'none', when in scratchbox.

2007-07-02  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fallback for BINARY
	* Fallback for UIDPLUS
	* Added a check for the session in TnyCamelTransportAccount
	* Bugfix when finalizing an account
	* Removed some old internal hooks-API

2007-07-01  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixed/updated the Python bindings
	* Fixed the gtk-doc API documentation genation process
	* Updated the online gtk-doc API documentation
	* Prepared a testing QEmu virtual machine
	* Marked the Kolumbus IMAP server as an idiot's IMAP server, as it
	doesn't correctly support UIDPLUS and BINARY

2007-06-29  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(on_connection_event), (tny_maemo_conic_device_connect):
	Removed debug output.

2007-06-29  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c: